--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <meta charset="UTF-8">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Code Louisville Student Portfolio</title>
@@ -68,7 +70,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="img/webdev.jpg" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
